@@ -1,4 +1,6 @@
-(defproject clj-lazy-json "0.0.2"
+(defproject clj-lazy-json "0.0.3"
   :description "Jackson-based lazy JSON parsing library for Clojure."
   :dependencies [[org.clojure/clojure "[1.2.0,1.3.0]"]
-                 [org.codehaus.jackson/jackson-core-asl "1.8.6"]])
+                 [org.codehaus.jackson/jackson-core-asl "1.8.6"]]
+  ; :jvm-opts ["-Xmx512m" "-XX:+UseConcMarkSweepGC"]
+  )
